# python-repository-tools-comparison

./: .gitignore  README.md
pants/: BUILD  pants.toml  requirements.txt
pants/mypackage/: BUILD  main.py
pdm/: .pdm.toml  pyproject.toml
poetry/: pyproject.toml
